Bring back the padding to avoid horizontal scrolling

--- a/app/www/style.css
+++ b/app/www/style.css
@@ -4,10 +4,6 @@
     margin-right: auto;
 }
 
-.container-fluid {
-    padding: 0;
-}
-
 .navbar {
     margin-bottom: 0;
     padding-left: 10px;
